# arduino-testing

./: .gitmodules  BoardOptions.cmake  CMakeLists.txt  project.cpp  project.ino
lib/: CMakeLists.txt
lib/cmake/: test_util.cmake
lib/mocks/: CMakeLists.txt
lib/playground/: CMakeLists.txt
lib/playground/src/: adder.cpp
lib/playground/tests/: CMakeLists.txt
lib/support/: CMakeLists.txt
lib/support/tests/: CMakeLists.txt  test_adder.cpp
src/: main.cpp  pins.h  print.cpp  print.h
